# Hyperfind

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: index.rs  mod.rs  search.rs  settings.rs
apps/desktop/src-tauri/src/ipc/: dto.rs  mod.rs
apps/desktop/src-tauri/src/state/: app_state.rs  mod.rs
apps/desktop/src/components/: DirectoryManager.tsx  ResultItem.tsx  ResultsList.tsx  SearchBar.tsx  StatusBar.tsx
apps/desktop/src/hooks/: useDebounce.ts
apps/desktop/src/pages/: SearchPage.tsx  SettingsPage.tsx
apps/desktop/src/services/: tauriApi.ts
apps/desktop/src/stores/: appStore.ts
apps/desktop/src/styles/: app.css
apps/desktop/src/types/: index.ts
crates/benchmark-suite/: Cargo.toml
crates/benchmark-suite/benches/: basic_search.rs
crates/collector/: Cargo.toml
crates/collector/src/: lib.rs  normalize.rs  scanner.rs  scheduler.rs  volumes.rs  watcher.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  models.rs  paths.rs  utils.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: cache.rs  lib.rs  ranking.rs  service.rs
crates/core-engine/src/content/: extractor.rs  mod.rs
crates/core-engine/src/parser/: dsl.rs  filters.rs  mod.rs
crates/core-engine/src/search/: matcher.rs  mod.rs  query.rs
crates/index-engine/: Cargo.toml
crates/index-engine/src/: bitmap.rs  document.rs  index_store.rs  lib.rs  loader.rs  mmap_store.rs  segment.rs  trigram.rs  wal.rs  writer.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs  mft.rs  usn.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
testdata/sample/code/: lib.rs  main.rs
