# File: crates/collector/Cargo.toml
[package]
name = "hyperfind-collector"
version.workspace = true
edition.workspace = true

[dependencies]
hyperfind-common = { path = "../common" }
hyperfind-index-engine = { path = "../index-engine" }
hyperfind-platform-windows = { path = "../platform-windows" }
walkdir = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }