# File: apps/desktop/src-tauri/Cargo.toml
[package]
name = "hyperfind-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
hyperfind-common = { path = "../../../crates/common" }
hyperfind-core-engine = { path = "../../../crates/core-engine" }
hyperfind-collector = { path = "../../../crates/collector" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "1", features = ["shell-open"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
